@@ -1,5 +1,12 @@
 2002-06-06  Marco Pantaleoni  <panta@elasticworld.org>
 
+	* src/modules/posix_m.c: added POSIX functions `dup', `dup2',
+	`pipe', `fork', `execv', `execve'.
+
+	* src/modules/posix_m.c: added a `posix.has' hash table, indexed
+	by symbols like `#access', `#fork', ... indicating if the named
+	functionality is implemented or not.
+
 	* private.h cnf.h.in builtin.c modules/posix_m.c
 	modules/Makefile.am: made possible to chose between statically
 	linked-in and dynamic for the `posix' modules.
